name:                ekg-core
version:             0.1.1.3
synopsis:            Tracking of system metrics
description:
  This library lets you defined and track system metrics.
homepage:            https://github.com/tibbe/ekg-core
bug-reports:         https://github.com/tibbe/ekg-core/issues
license:             BSD3
license-file:        LICENSE
author:              Johan Tibell
maintainer:          Johan Tibell <johan.tibell@gmail.com>,
                     Mikhail Glushenkov <mikhail.glushenkov@gmail.com>
category:            System
build-type:          Simple
extra-source-files:  CHANGES.md
cabal-version:       >=1.10
tested-with:         GHC==8.2.1, GHC==8.0.2, GHC == 7.10.3, GHC == 7.8.4, GHC == 7.6.3

library
  exposed-modules:
    System.Metrics
    System.Metrics.Counter
    System.Metrics.Distribution
    System.Metrics.Distribution.Internal
    System.Metrics.Gauge
    System.Metrics.Label

  other-modules:
    Data.Array
    Data.Atomic
    System.Metrics.ThreadId

  build-depends:
    ghc-prim < 0.6,
    base >= 4.5 && < 4.11,
    containers >= 0.5 && < 0.6,
    text < 1.3,
    unordered-containers < 0.3

  default-language:    Haskell2010

  ghc-options: -Wall
  if arch(i386)
    cc-options: -march=i686
  includes: distrib.h
  install-includes: distrib.h
  include-dirs: cbits
  c-sources: cbits/atomic.c cbits/distrib.c

benchmark counter
  main-is: Counter.hs
  type: exitcode-stdio-1.0
  build-depends:
    base,
    ekg-core
  default-language: Haskell2010
  hs-source-dirs: benchmarks
  ghc-options: -O2 -threaded -Wall

benchmark distribution
  main-is: Distribution.hs
  type: exitcode-stdio-1.0
  build-depends:
    base,
    ekg-core
  default-language: Haskell2010
  hs-source-dirs: benchmarks
  ghc-options: -O2 -threaded -Wall

source-repository head
  type:     git
  location: https://github.com/tibbe/ekg-core.git
